--- a/style.css
+++ b/style.css
@@ -23,13 +23,18 @@
 
 .about-me {
     display: flex;
-    background-color: antiquewhite;
     justify-content: center;
     align-items: center;
     padding: 40px 80px;
     border-top: 2px solid #eeeeee;
     font-size: 25px;
   }
+
+  .about{
+    background-color: antiquewhite;
+    text-align: center;
+  }
+
 
 .con1{
     text-align: center;
@@ -66,5 +71,7 @@ input, textarea {
   .left {
        margin-right: 2%; 
   }
-
+iframe{
+    padding-top: 80px;
+}
 
